Scaffolding re-added, PostTests and PostControllerTests begun

--- a/src/main/resources/templates/homepage-template.html
+++ b/src/main/resources/templates/homepage-template.html
@@ -1,4 +1,23 @@
 <!DOCTYPE html>
-<head></head>
-<body></body>
-<footer></footer>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Multithread Blog - Homepage</title>
+  </head>
+  <body>
+      <article>
+      <h2 class="post__title">POST TITLE</h2>
+      <h4 class="post__author">>AUTHOR</h4>
+      <h4 class="post__publish-date">PUBLISH-DATE</h4>
+      <h3 class="post__category">CATEGORY</h3>
+      <h3>Tags:</h3>
+      <ul>
+          <li>TAG</li>
+      </ul>
+      <p class="post__content"></p>
+      </article>
+  </body>
+  <footer></footer>
+</html>
